fixed cursor, fixed various issues at 320 (sizing, gaps and cropping)

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -14,6 +14,7 @@
 .card__content {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 25px 30px 25px 20px;
   color: black;
 }
@@ -28,6 +29,7 @@
   text-wrap: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 210px;
 }
 
 .card__button {
