--- a/blocks/header.css
+++ b/blocks/header.css
@@ -23,6 +23,6 @@
 
 @media screen and (max-width: 320px) {
   .header__logo {
-    padding-left: 19px;
+    padding-left: 27px;
   }
 }
